[package]
name = "verify"
version = "0.1.0"
authors = ["edef"]
edition = "2018"

[dependencies]
gulp = { path = "../gulp", features = ["std"] }
git = { path = "../git", features = ["std"] }
git_delta = { path = "../git_delta", features = ["std"] }
git_packfile = { path = "../git_packfile" }
hexdump = "*"
flate2 = "*"
failure = "*"
