[package]
name = "verify"
version = "0.1.0"
authors = ["edef <edef@edef.eu>"]
edition = "2018"

[dependencies]
gulp = { path = "../gulp", features = ["std"] }
git = { path = "../git", features = ["std"] }
git_delta = { path = "../git_delta", features = ["std"] }
git_pack = { path = "../git_pack" }
flate2 = "*"

[features]
nightly = ["git_delta/nightly", "flate2/nightly"]
